; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-circular-queue.c_ff_circular_queue_advance_write.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-circular-queue.c_ff_circular_queue_advance_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ff_circular_queue = type { i64, i32, i32, i8** }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_circular_queue_advance_write(%struct.ff_circular_queue* %0, i8* %1) #0 {
  %3 = alloca %struct.ff_circular_queue*, align 8
  %4 = alloca i8*, align 8
  store %struct.ff_circular_queue* %0, %struct.ff_circular_queue** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %3, align 8
  %7 = getelementptr inbounds %struct.ff_circular_queue, %struct.ff_circular_queue* %6, i32 0, i32 3
  %8 = load i8**, i8*** %7, align 8
  %9 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %3, align 8
  %10 = getelementptr inbounds %struct.ff_circular_queue, %struct.ff_circular_queue* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = getelementptr inbounds i8*, i8** %8, i64 %11
  store i8* %5, i8** %12, align 8
  %13 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %3, align 8
  %14 = getelementptr inbounds %struct.ff_circular_queue, %struct.ff_circular_queue* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = add i64 %15, 1
  %17 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %3, align 8
  %18 = getelementptr inbounds %struct.ff_circular_queue, %struct.ff_circular_queue* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = sext i32 %19 to i64
  %21 = urem i64 %16, %20
  %22 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %3, align 8
  %23 = getelementptr inbounds %struct.ff_circular_queue, %struct.ff_circular_queue* %22, i32 0, i32 0
  store i64 %21, i64* %23, align 8
  %24 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %3, align 8
  %25 = call i32 @queue_lock(%struct.ff_circular_queue* %24)
  %26 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %3, align 8
  %27 = getelementptr inbounds %struct.ff_circular_queue, %struct.ff_circular_queue* %26, i32 0, i32 2
  %28 = load i32, i32* %27, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %27, align 4
  %30 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %3, align 8
  %31 = call i32 @queue_unlock(%struct.ff_circular_queue* %30)
  ret void
}

declare dso_local i32 @queue_lock(%struct.ff_circular_queue*) #1

declare dso_local i32 @queue_unlock(%struct.ff_circular_queue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
